--- a/index2.html
+++ b/index2.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230710170614"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230710170614"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230710170614"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230710170614"></script>
-  <script src="files/script /tilt.js?_v=20230710170614"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230710210404"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230710210404"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230710210404"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230710210404"></script>
+  <script src="files/script /tilt.js?_v=20230710210404"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230710170614" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230710170614" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230710210404" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230710210404" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
 </head>
@@ -73,7 +73,7 @@
               <div class="row justify-content-center w-1">
                 <div class="col-10 position-relative block_main_home">
                 <a href="index3.html">
-                  <picture><source srcset="img/red_friesa.webp" type="image/webp"><img class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
+                  <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main anim-pic">
                     <div class="col-6">
@@ -99,7 +99,7 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative block_main_home">
                 <a href="index4.html">
-                  <picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img class="mobile_pic anim-pic" src="img/aston_martin_main.jpg" alt=""></picture>
+                  <picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="mobile_pic anim-pic" src="img/aston_martin_main.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main anim-pic">
                     <div class="col-6">
@@ -125,7 +125,7 @@
               <div class="row justify-content-center w-3">
                 <div class="col-10 position-relative block_main_home">
                   <a href="index5.html">
-                    <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="mobile_pic anim-pic" src="img/Landing_Memoj.jpg" alt=""></picture>
+                    <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="mobile_pic anim-pic" src="img/Landing_Memoj.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main anim-pic">
                     <div class="col-6">
@@ -151,7 +151,7 @@
               <div class="row justify-content-center w-4">
                 <div class="col-10 position-relative block_main_home">
                 <a href="index6.html">
-                  <picture><source srcset="img/Landing_org.webp" type="image/webp"><img class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
+                  <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -177,7 +177,7 @@
               <div class="row justify-content-center w-5">
                 <div class="col-10 position-relative block_main_home">
                   <a href="index7.html">
-                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
+                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -203,7 +203,7 @@
               <div class="row justify-content-center w-6">
                 <div class="col-10 position-relative block_main_home">
                   <a href="index8.html">
-                    <picture><source srcset="img/senator_main.webp" type="image/webp"><img class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
+                    <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -229,7 +229,7 @@
               <div class="row justify-content-center w-7">
                 <div class="col-10 position-relative block_main_home">
                 <a href="index9.html">
-                  <picture><source srcset="img/Fs_home.webp" type="image/webp"><img class="mobile_pic" src="img/Fs_home.jpg" alt=""></picture>
+                  <picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/Fs_home.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -255,7 +255,7 @@
               <div class="row justify-content-center w-8">
                 <div class="col-10 position-relative block_main_home">
                  <a href="index10.html">
-                  <picture><source srcset="img/rialust_main.webp" type="image/webp"><img class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
+                  <picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
                  </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -281,7 +281,7 @@
               <div class="row justify-content-center w-9">
                 <div class="col-10 position-relative block_main_home">
                 <a href="index11.html">
-                  <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
+                  <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
                </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -307,7 +307,7 @@
               <div class="row justify-content-center w-10">
                 <div class="col-10 position-relative block_main_home">
                   <a href="index12.html">
-                    <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
+                    <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -337,12 +337,12 @@
   </main>
 </body>
 
-<script src="files/script /swup.js?_v=20230710170614"></script>
-<script src="files/script /locomotive.js?_v=20230710170614"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230710170614"></script>
-<script src="files/script /script.js?_v=20230710170614" ></script>
+<script src="files/script /swup.js?_v=20230710210404"></script>
+<script src="files/script /locomotive.js?_v=20230710210404"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230710210404"></script>
+<script src="files/script /script.js?_v=20230710210404" ></script>
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230710170614"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230710210404"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
