--- a/index8.html
+++ b/index8.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230710170614"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230710170614"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230710170614"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230710170614"></script>
-  <script src="files/script /tilt.js?_v=20230710170614"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230710210404"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230710210404"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230710210404"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230710210404"></script>
+  <script src="files/script /tilt.js?_v=20230710210404"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230710170614" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230710170614" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230710210404" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230710210404" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
 </head>
@@ -60,8 +60,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230710170614" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230710170614"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230710210404" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230710210404"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -105,13 +105,13 @@
           </div>
           <div class="info_gradient"></div>
           <div id="imgbox" class="imgbox imgbox_sen">
-            <picture><source srcset="img/senator_home.webp" type="image/webp"><img class="img_back_main" id="img_back_main big_senator" src="img/senator_home.jpg" alt=""></picture>
+            <picture><source srcset="img/senator_home.webp" type="image/webp"><img class="img_back_main_SN" id="img_back_main big_senator" src="img/senator_home.jpg" alt=""></picture>
           </div>
         </div>
         <div class="pg-1_bk_1">
           <div class="container">
           </div>
-          <picture><source srcset="img/senator_post.webp" type="image/webp"><img width="100%" src="img/senator_post.jpg" alt=""></picture>
+          <picture><source srcset="img/senator_post.webp" type="image/webp"><img id="img_back_SN_2" width="100%" src="img/senator_post.jpg" alt=""></picture>
         </div>
         <div class="pg-1_bk_0">
           <div class="row justify-content-end align-items-center d-flex">
@@ -136,7 +136,7 @@
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
                 <div class="col-8">
-                  <picture><source srcset="img/senator_ver.webp" type="image/webp"><img width="100%" src="img/senator_ver.jpg" alt=""></picture>
+                  <picture><source srcset="img/senator_ver.webp" type="image/webp"><img id="img_back_SN_3" width="100%" src="img/senator_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
@@ -153,7 +153,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><source srcset="img/senator_macbook.webp" type="image/webp"><img style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/senator_macbook.png" alt=""></picture>
+                  <picture><source srcset="img/senator_macbook.webp" type="image/webp"><img id="img_back_SN_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/senator_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
@@ -165,7 +165,7 @@
               <div class="col text-center as_header">
                 <h2>Main colors</h2>
               </div>
-              <picture><source srcset="img/senator_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/senator_imac.jpg" alt=""></picture>
+              <picture><source srcset="img/senator_imac.webp" type="image/webp"><img id="img_back_SN_5" class="bk_2_img" width="100%" src="img/senator_imac.jpg" alt=""></picture>
 
 
             <div class="col-4 white0000">
@@ -278,8 +278,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230710170614"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230710170614"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230710210404"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230710210404"></script> -->
 
 
 
@@ -290,15 +290,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230710170614"></script>
-<script src="files/script /locomotive.js?_v=20230710170614"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230710170614"></script>
+<script src="files/script /swup.js?_v=20230710210404"></script>
+<script src="files/script /locomotive.js?_v=20230710210404"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230710210404"></script>
 
-<script src="files/script /script.js?_v=20230710170614"></script>
+<script src="files/script /script.js?_v=20230710210404"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230710170614"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230710210404"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
